refactor entity package